Fixed footer layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -1674,7 +1674,7 @@ Third letter is the number of spacing in pixels. Adjust the amounts generated by
           align-items: center;
 }
 
-.nav__items--primary {
+.header .nav__items--primary {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1690,21 +1690,21 @@ Third letter is the number of spacing in pixels. Adjust the amounts generated by
           align-items: center;
 }
 
-.nav__item {
+.header .nav__item {
   display: inline-block;
   font-size: 16px;
   font-weight: 700;
 }
 
-.nav__item:nth-child(1) a {
+.header .nav__item:nth-child(1) a {
   color: #fff;
 }
 
-.dropdown {
+.header .dropdown {
   color: #fff;
 }
 
-.dropdown__items {
+.header .dropdown__items {
   display: none;
 }
 
